Closed
Bug 406747
Opened 18 years ago
Closed 18 years ago
Exception when setting calRecurrenceRule.endDate = null
Categories
(Calendar :: Internal Components, defect)
Calendar
Internal Components
Tracking
(Not tracked)
VERIFIED
FIXED
0.8
People
(Reporter: dbo, Assigned: dbo)
Details
(Keywords: regression)
Attachments
(1 file)
|
965 bytes,
patch
|
Fallen
:
review+
|
Details | Diff | Splinter Review |
regression from bug 400950:
Error: [Exception... "Component returned failure code: 0x80004003
(NS_ERROR_INVALID_POINTER) [calIRecurrenceRule.endDate]" nsresult:
"0x80004003 (NS_ERROR_INVALID_POINTER)" location: "JS frame ::
file:///C:/Documents%20and%20Settings/at93795/Application%20Data/Thunderbird/Profiles/bigaf98i.default2/extensions/%7Be2fda1a4-762b-4020-b5ad-a41df1933103%7D/js/calStorageCalendar.js
:: anonymous :: line 1608" data: no]
Source File:
file:///C:/Documents%20and%20Settings/at93795/Application%20Data/Thunderbird/Profiles/bigaf98i.default2/extensions/%7Be2fda1a4-762b-4020-b5ad-a41df1933103%7D/js/calStorageCalendar.js
Line: 1608
| Assignee | ||
Comment 1•18 years ago
|
||
Assignee: nobody → daniel.boelzle
Status: NEW → ASSIGNED
Attachment #291414 -
Flags: review?(philipp)
Updated•18 years ago
|
Attachment #291414 -
Flags: review?(philipp) → review+
| Assignee | ||
Comment 2•18 years ago
|
||
Checked in on HEAD and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Target Milestone: --- → 0.8
Comment 3•18 years ago
|
||
Verified in nightly build 20071205 -> task is fixed.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•