Bug 406747  Exception when setting calRecurrenceRule.endDate = null; r=philipp